--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "angular": ">= 1.0.7",
     "bootstrap-daterangepicker": "1.3.17",
-    "bootstrap": "~3.0.0"
+    "bootstrap": "~3.0.0",
+    "ng-bs-daterangepicker": "https://github.com/Precognize/ng-bs-daterangepicker.git#v0.0.6"
   },
   "devDependencies": {
     "angular-mocks": ">= 1.0.7"
